Directory: Style pass on organizations map.
Still WIP.

--- a/dillo/templates/dillo/directory/user_directory.pug
+++ b/dillo/templates/dillo/directory/user_directory.pug
@@ -56,7 +56,7 @@ script(src='//unpkg.com/globe.gl')
 .row.dir-container
   .col.dir-users
 
-    ul.dir-users-list#user-list
+    ul.dir-items-list#user-list
 
   .col.dir-globe#globe-container
     .globe-container
