--- a/dillo/templates/account/signup.pug
+++ b/dillo/templates/account/signup.pug
@@ -4,7 +4,7 @@
 | {% load crispy_forms_tags %}
 
 | {% block head_title %}{% trans "Signup" %}{% endblock %}
-| {% block columns_width %}col-md-5{% endblock %}
+| {% block columns_width %}col{% endblock %}
 
 | {% block content_card %}
 .card.account.login
